--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: digital_jahai_malay
+name: digital_jahai
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
