--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "digital_jahai_malay" "\0"
+            VALUE "FileDescription", "digital_jahai" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "digital_jahai_malay" "\0"
+            VALUE "InternalName", "digital_jahai" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "digital_jahai_malay.exe" "\0"
-            VALUE "ProductName", "digital_jahai_malay" "\0"
+            VALUE "OriginalFilename", "digital_jahai.exe" "\0"
+            VALUE "ProductName", "digital_jahai" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
