--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   salomon_bottom_bar: ^3.2.0
   flutter_screenutil: ^5.3.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
