--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.4
   cool_alert: ^1.1.0
   ms_undraw: ^3.1.0+2
+  skeleton_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
