--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.digital_jahai">
+    package="com.uitm.digital_jahai">
    <application
         android:label="digital_jahai"
         android:name="${applicationName}"
