--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.uitm.digital_jahai">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="digital_jahai"
+        android:label="Digital Jahai"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
