--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_linkify: ^5.0.2
   url_launcher: ^6.0.20
   flutter_launcher_icons: ^0.9.2
+  iconly: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
