--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.0.20
   flutter_launcher_icons: ^0.9.2
   iconly: ^1.0.1
+  statusbarz: ^1.0.11
 
 dev_dependencies:
   flutter_lints: ^2.0.1
@@ -78,8 +79,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/icon.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
