--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.0.20
   flutter_launcher_icons: ^0.9.2
   iconly: ^1.0.1
+  flutter_svg: ^1.1.0
   statusbarz: ^1.0.11
 
 dev_dependencies:
