--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   iconly: ^1.0.1
   flutter_svg: ^1.1.0
   statusbarz: ^1.0.11
+  awesome_drawer_bar: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
