--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   iconly: ^1.0.1
   flutter_svg: ^1.1.0
   statusbarz: ^1.0.11
-  awesome_drawer_bar: ^1.0.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_lints: ^2.0.1
