--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   iconly: ^1.0.1
   flutter_svg: ^1.1.0
-  statusbarz: ^1.0.11
   get: ^4.6.5
+  platform_device_id: ^1.0.1
+  lottie: ^1.4.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.1
