--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   platform_device_id: ^1.0.1
   lottie: ^1.4.2
   get_storage: ^2.0.3
+  json_model: ^1.0.0
+  json_serializable: ^6.4.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
