--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.1
   flutter_linkify: ^5.0.2
   url_launcher: ^6.0.20
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.10.0
   iconly: ^1.0.1
   flutter_svg: ^1.1.0
   get: ^4.6.5
@@ -52,6 +52,7 @@ dependencies:
   json_model: ^1.0.0
   json_serializable: ^6.4.0
   json_annotation: ^4.7.0
+  import_sorter: ^4.6.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
